Get JWT token for client