@@ -6,6 +6,16 @@ plugins {
 group = 'io.microdrive'
 version = '0.0.1-SNAPSHOT'
 
+sourceCompatibility = JavaVersion.VERSION_14
+targetCompatibility = JavaVersion.VERSION_14
+
+compileJava {
+	options.compilerArgs += ["--enable-preview"]
+}
+compileTestJava {
+	options.compilerArgs += ["--enable-preview"]
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
@@ -14,6 +24,11 @@ dependencies {
 
 	implementation "javax.xml.bind:jaxb-api:${jaxbApiVersion}"
 	implementation "javax.servlet:javax.servlet-api:4.0.1"
+
+	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
+	runtime "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
+	runtime "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
+	implementation "com.nimbusds:nimbus-jose-jwt:${nimbusJoseJwtVersion}"
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
